<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity"
    android:background="@drawable/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_label_systolic_pressure"
        android:text="Systolic Pressure"
        android:textStyle="italic"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="150dp">
    </TextView>
    <EditText
        android:layout_below="@+id/add_label_systolic_pressure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Add_Enter_Systolic_pressure"
        android:hint="Enter Systolic pressure"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:paddingLeft="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_bg"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">
    </EditText>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_label_diastolic_pressure"
        android:layout_below="@+id/Add_Enter_Systolic_pressure"
        android:text="Diastolic Pressure"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        >
    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_label_diastolic_pressure"
        android:id="@+id/Add_Enter_Diastolic_pressure"
        android:hint="Enter Diastolic pressure"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:paddingLeft="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"

        android:paddingTop="15dp"
        android:background="@drawable/input_bg"
        android:paddingBottom="20dp">
    </EditText>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_label_heart_rate"
        android:textColor="@color/black"
        android:layout_below="@+id/Add_Enter_Diastolic_pressure"
        android:text="Heart Rate"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        >
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_label_enter_comment"
        android:layout_below="@+id/Add_Enter_Heart_Rate"
        android:text="Comment"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_label_heart_rate"
        android:id="@+id/Add_Enter_Heart_Rate"
        android:hint="Enter Heart Rate"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:paddingLeft="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_bg"
        android:paddingTop="15dp"
        android:paddingBottom="20dp">
    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_label_enter_comment"
        android:id="@+id/ADD_Enter_Comment"
        android:paddingTop="15dp"
        android:paddingBottom="20dp"
        android:hint="Enter Comment"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:paddingLeft="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_bg"
        >
    </EditText>

    <android.widget.Button
        android:id="@+id/ADD_ADDButton"
        android:layout_width="336dp"
        android:layout_height="73dp"
        android:layout_below="@id/ADD_Enter_Comment"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_bg"
        android:text="ADD"
        android:textColor="@color/white"
        android:textSize="16sp"></android.widget.Button>
    <EditText
        android:layout_below="@+id/add_label_systolic_pressure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Add_Enter_Systolic_pressure"
        android:hint="Enter Systolic pressure"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:paddingLeft="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_bg"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">

</RelativeLayout>
