<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:theme="@style/Theme.AppCompat.NoActionBar"

    android:background="@drawable/background"
    tools:context=".UpdateActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="58dp"
        android:orientation="vertical"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label_systolic_pressure"
        android:text="Systolic Pressure"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="180dp">
    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_systolic_pressure"
        android:id="@+id/Update_Enter_Systolic_pressure"
        android:hint="Enter Systolic pressure"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:paddingLeft="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_bg"
        android:paddingTop="15dp"
        android:paddingBottom="15dp">
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label_diastolic_pressure"
        android:layout_below="@+id/Update_Enter_Systolic_pressure"
        android:text="Diastolic Pressure"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        >
    </TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_diastolic_pressure"
        android:id="@+id/Update_Enter_Diastolic_pressure"
        android:hint="Enter Diastolic pressure"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:paddingLeft="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_bg"
        android:paddingTop="15dp"
        android:paddingBottom="15dp">
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label_heart_rate"
        android:layout_below="@+id/Update_Enter_Diastolic_pressure"
        android:text="Heart Rate"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        >
    </TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_heart_rate"
        android:id="@+id/Update_Enter_Heart_Rate"
        android:hint="Enter Heart rate"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:paddingLeft="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_bg"
        android:paddingTop="15dp"
        android:paddingBottom="15dp">
    </EditText>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label_enter_comment"
        android:layout_below="@+id/Update_Enter_Heart_Rate"
        android:text="Comment"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        >
    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_enter_comment"
        android:id="@+id/Update_Enter_Comment"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:hint="Enter Comment"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:paddingLeft="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_bg"
        >
    </EditText>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Update_Enter_Comment"
        android:layout_centerHorizontal="true"
        >

        <android.widget.Button
            android:id="@+id/Update_UpdateButton"
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_bg"
            android:text="UPDATE"

            android:textColor="@color/white"></android.widget.Button>

        <android.widget.Button
            android:id="@+id/Update_DeleteButton"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_bg"
            android:text="Delete"
            android:textColor="@color/white"></android.widget.Button>


    </LinearLayout>

</RelativeLayout>
